[package]
name = "intercom"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = { version = "0.35", default-features = false, features = [
    "server_2_10",
] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
pin-project-lite = { version = "0.2" }
thiserror = { version = "1.0" }

[features]
default = ["ring"]
ring = ["async-nats/ring"]
aws-lc-rs = ["async-nats/aws-lc-rs"]
json = ["serde_json"]
msgpack = ["rmp-serde"]
